testsuite/poke.pkl/cdiv-f64-diag-1.pk
/* { dg-do compile } */

var res
  = 7U ./^ 1L; /* { dg-error "invalid operand .*" } */
